Implemented the Diagnostic scan service and fixed some bugs
