# src/main/java/com/bmw/maintenance/api/MaintenanceTaskResource.java
@@ -1,11 +1,14 @@
 package com.bmw.maintenance.api;
 
+import com.bmw.maintenance.domain.DiagnosticScan.ErrorCodes;
+import com.bmw.maintenance.domain.DiagnosticScan.ScannerType;
 import com.bmw.maintenance.domain.TaskStatus;
 import com.bmw.maintenance.domain.TaskType;
 import com.bmw.maintenance.domain.TireTask.TirePosition;
 import com.bmw.maintenance.domain.TireTask.TireServiceType;
 import com.bmw.maintenance.domaininteraction.MaintenanceTaskService;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
@@ -18,6 +21,8 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 
 import lombok.NoArgsConstructor;
+
+import java.util.Set;
 
 /**
  * REST resource for managing maintenance tasks.
@@ -46,8 +51,7 @@ public class MaintenanceTaskResource {
     @POST
     @Path("/")
     public Response createTask(@Valid CreateTaskRequest request) {
-        Long taskId = maintenanceTaskService.createTask(request.vin(), request.type(), request.notes(),request.tirePosition, request.tireServiceType);
-
+        Long taskId = maintenanceTaskService.createTask(request.vin(), request.type(), request.notes(),request.tirePosition, request.tireServiceType,request.scannerType,request.errorCodes);
         return Response.status(Response.Status.CREATED).entity(taskId).build();
     }
 
@@ -122,6 +126,9 @@ public class MaintenanceTaskResource {
             TireServiceType tireServiceType,
 
             TirePosition tirePosition,
+
+            ScannerType scannerType,
+            Set<ErrorCodes> errorCodes,
 
             String notes
     ) {}
