# src/main/java/com/bmw/maintenance/domain/DiagnosticScan/ScannerType.java
@@ -1,0 +1,6 @@
+package com.bmw.maintenance.domain.DiagnosticScan;
+
+public enum ScannerType {
+    BASIC,
+    ADVANCED
+}
