# src/main/java/com/bmw/maintenance/domain/TaskType.java
@@ -7,4 +7,5 @@ public enum TaskType {
     OIL_CHANGE,
     BRAKE_INSPECTION,
     TIRE_SERVICE,
+    DIAGNOSTIC_SCAN
 }
